# armnn

samples/Artistic/: CMakeLists.txt  x86_build.sh
samples/Artistic/src/: Main.cpp
samples/InstanceSegmentation/: CMakeLists.txt
samples/InstanceSegmentation/src/: Yolact.hpp  yolact.cpp
samples/Segmentation/: CMakeLists.txt  x86_build.sh
samples/Segmentation/src/: Main.cpp
samples/SpeechRecognition/: x86_build.sh
samples/YoloV5/: CMakeLists.txt  x86_build.sh
samples/YoloV5/src/: YoloV5.cpp  YoloV5.hpp
samples/YoloX/: CMakeLists.txt  x86_build.sh
samples/YoloX/src/: YoloX.cpp  YoloX.hpp
samples/common/cmake/: find_armnn.cmake
scripts/: x86_build.sh
src/backends/backendsCommon/: WorkloadData.cpp
src/backends/dynamic/custom/: CMakeLists.txt  CustomDynamicBackend.cpp
src/backends/npu/: XpuBackend.cpp  XpuLayerSupport.cpp  XpuLayerSupport.hpp  XpuPreCompiledObject.hpp  XpuWorkloadFactory.cpp  XpuWorkloadFactory.hpp
src/backends/npu/test/: CMakeLists.txt  XpuEndToEndTests.cpp
src/backends/npu/workloads/: CMakeLists.txt  XpuPreCompiledWorkload.cpp
src/backends/xpu/: CMakeLists.txt  XpuBackend.cpp  XpuBackend.hpp  XpuBackendUtils.cpp  XpuBackendUtils.hpp  XpuLayerBridge.cpp  XpuLayerBridge.hpp  XpuLayerSupport.cpp  XpuPreCompiledObject.cpp  XpuRegistryInitializer.cpp  XpuSubgraphViewOptimizer.cpp  XpuSubgraphViewOptimizer.hpp  XpuWorkloadFactory.cpp  XpuWrapper.cpp  XpuWrapper.hpp  backend.cmake  backend.mk
src/backends/xpu/test/: XpuCreateWorkloadTests.cpp
src/backends/xpu/workloads/: XpuAdditionWorkload.cpp  XpuAdditionWorkload.hpp  XpuPreCompiledWorkload.cpp  XpuPreCompiledWorkload.hpp
tests/: CMakeLists.txt
tests/TfLiteDeepLabV3-Armnn/: TfLiteDeepLabV3-Armnn.cpp
tests/TfLiteWav2letter-Armnn/: TfLiteWav2letter-Armnn.cpp
